# rtv1_dispatch

./: CMakeLists.txt  builton.c  dispatch.c  dispatch.h  intersect.c  key.c  light.c  main.c  mouse.c  normal.c  parser.c  render.c  rtv1.h  set_objects.c  sphere.h  split_window.c
libft/: Makefile  ft_abs.c  ft_atoi.c  ft_atoi_base.c  ft_brackets.c  ft_bzero.c  ft_count_printable_str.c  ft_count_words.c  ft_get_file_content.c  ft_get_next_newline.c  ft_intlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  (+39 more)
libft/includes/: libft.h
libvec/: Makefile  ft_vecadd.c  ft_veccross.c  ft_vecdot.c  ft_veclength.c  ft_vecmult.c  ft_vecnorm.c  ft_vecprod.c  ft_vecsub.c  ft_vectransfor.c  libvec.h
minilibx/man/man3/: mlx.1  mlx_loop.1
sc/: plane  spheres  t  test  test2  test3
